--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Recipe application",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --dist-dir ./dist"
+    "build": "parcel build src/index.html --dist-dir ./docs --public-url ./"
   },
   "author": "Arthur Malumian",
   "license": "ISC",
